--- a/website/www/site/layouts/partials/section-menu/en/documentation.html
+++ b/website/www/site/layouts/partials/section-menu/en/documentation.html
@@ -154,6 +154,7 @@
         <li><a href="/documentation/patterns/ai-platform/">AI Platform</a></li>
         <li><a href="/documentation/patterns/schema/">Schema</a></li>
         <li><a href="/documentation/patterns/bqml/">BigQuery ML</a></li>
+        <li><a href="/documentation/patterns/cross-language/">Cross-language transforms</a></li>
       </ul>
     </li>
   </ul>
