[BEAM-11544] BQML pattern

--- a/website/www/site/layouts/partials/section-menu/en/documentation.html
+++ b/website/www/site/layouts/partials/section-menu/en/documentation.html
@@ -153,6 +153,7 @@
         <li><a href="/documentation/patterns/bigqueryio/">BigQueryIO</a></li>
         <li><a href="/documentation/patterns/ai-platform/">AI Platform</a></li>
         <li><a href="/documentation/patterns/schema/">Schema</a></li>
+        <li><a href="/documentation/patterns/bqml/">BigQuery ML</a></li>
       </ul>
     </li>
   </ul>
