[BEAM-11545] State & timer for batched RPC calls pattern

--- a/website/www/site/layouts/partials/section-menu/en/documentation.html
+++ b/website/www/site/layouts/partials/section-menu/en/documentation.html
@@ -155,6 +155,7 @@
         <li><a href="/documentation/patterns/schema/">Schema</a></li>
         <li><a href="/documentation/patterns/bqml/">BigQuery ML</a></li>
         <li><a href="/documentation/patterns/cross-language/">Cross-language transforms</a></li>
+        <li><a href="/documentation/patterns/state-and-timers/">State & timers</a></li>
       </ul>
     </li>
   </ul>
