--- a/website/www/site/layouts/shortcodes/documentation/capability-matrix-single.html
+++ b/website/www/site/layouts/shortcodes/documentation/capability-matrix-single.html
@@ -88,7 +88,7 @@
             </div>
         </div>
     </div>
-    <a id="table-link" href="{{ $category.description | urlize }}">{{ T "capability-go-big" }}</a>
+    <a id="table-link" href="/documentation/runners/capability-matrix/{{ $category.description | urlize }}/">{{ T "capability-go-big" }}</a>
 {{ end }}
 
 <script>
