--- a/website/www/site/layouts/shortcodes/flink_java_pipeline_options.html
+++ b/website/www/site/layouts/shortcodes/flink_java_pipeline_options.html
@@ -78,6 +78,11 @@ Should be called before running the tests.
   <td>Default: <code>false</code></td>
 </tr>
 <tr>
+  <td><code>filesToStage</code></td>
+  <td>Jar-Files to send to all workers and put on the classpath. The default value is all files from the classpath.</td>
+  <td></td>
+</tr>
+<tr>
   <td><code>finishBundleBeforeCheckpointing</code></td>
   <td>If set, finishes the current bundle and flushes all output before checkpointing the state of the operators. By default, starts checkpointing immediately and buffers any remaining bundle output as part of the checkpoint. The setting may affect the checkpoint alignment.</td>
   <td>Default: <code>false</code></td>
